Add admin analytics panel with activity tracking and role-based access.
Enables /admin for monitoring users, sessions, question rankings, and paginated activity logs on existing production databases via migration scripts.

Co-authored-by: Cursor <cursoragent@cursor.com>